refactor(config): 调整配置文件位置并优化版本管理
- 将配置文件从程序运行目录移至数据目录下
- 添加Maven资源过滤实现版本号自动注入
- 更新SQLite JDBC驱动至3.53.2.1版本
- 升级Gson库至2.14.0版本
- 增加Bouncy Castle库至1.85版本
- 修复前端密码修改表单样式问题
- 更新README文档中的启动参数说明